RESOLVED FIXED244638
WebKit fails to render extreme border-radius
https://bugs.webkit.org/show_bug.cgi?id=244638
Summary WebKit fails to render extreme border-radius
Simon Fraser (smfr)
Reported 2022-08-31 15:34:46 PDT
Created attachment 462059 [details] Test case The inner border-radius is not applied in the attached testcase.
Attachments
Test case (562 bytes, text/html)
2022-08-31 15:34 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2022-09-07 15:35:16 PDT
Vitor Roriz
Comment 2 2022-11-18 07:13:38 PST
EWS
Comment 3 2022-11-22 09:53:55 PST
Committed 256943@main (8a3db1af14c1): <https://commits.webkit.org/256943@main> Reviewed commits have been landed. Closing PR #6632 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.